--- a/styles.css
+++ b/styles.css
@@ -10901,6 +10901,9 @@ p.lead {
   #sideNav .navbar-brand .img-profile {
     max-width: 10rem;
     max-height: 10rem;
+    width: 100%;
+    height: auto;
+    display: block !important;
     border: 0.5rem solid rgba(255, 255, 255, 0.2);
   }
   #sideNav .navbar-collapse {
